--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.6.0"
+    "nodemailer": "^6.6.0",
+    "nodemailer-express-handlebars": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
