--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server-build" : "rm -r ./../server/build | react-scripts build && cd ./../server && npm run getBuild"
   },
   "eslintConfig": {
     "extends": [
