--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "SET NODE_ENV=development && nodemon ./server.js",
-    "prod": "SET NODE_ENV=production && node ./server.js"
+    "prod": "SET NODE_ENV=production && node ./server.js",
+    "getBuild" : "cp -r ./../client/build ./"
   },
   "author": "Aygyun Yakub",
   "license": "ISC",
