--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-image-gallery": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -20,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server-build" : "rm -r ./../server/build | react-scripts build && cd ./../server && npm run getBuild"
+    "server-build": "rm -r ./../server/build | react-scripts build && cd ./../server && npm run getBuild"
   },
   "eslintConfig": {
     "extends": [
