--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "SET NODE_ENV=development && nodemon ./server.js",
     "prod": "SET NODE_ENV=production && node ./server.js",
-    "getBuild" : "cp -r ./../client/build ./"
+    "getBuild": "cp -r ./../client/build ./"
   },
   "author": "Aygyun Yakub",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.13",
     "nodemailer": "^6.6.0",
     "nodemailer-express-handlebars": "^4.0.0"
   },
